added action for mobile menu
Signed-off-by: Leonardo Escuer <leoescuer@protonmail.com>

--- a/index.html
+++ b/index.html
@@ -4,27 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/static/index.css"/>
-    <script type="text/javascript" src="/static/index.js"></script>
+   
     <title>Text for Actix</title>
   </head>
   <body>
     <header>
       <h3>Title of the web page</h3>
       <ul class="nav">
-        <li>Portafolio</li>
-        <li>About Me</li>
-        <li>Contact</li>
+        <li class="" >Portafolio</li>
+        <li class="" >About Me</li>
+        <li class="" >Contact</li>
       </ul>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2 burger" width="40" height="40"
+  viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+  <line x1="4" y1="6" x2="20" y2="6" />
+  <line x1="4" y1="12" x2="20" y2="12" />
+  <line x1="4" y1="18" x2="20" y2="18" />
+      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x close" width="40" height="40"
+        viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+        <line x1="18" y1="6" x2="6" y2="18" />
+        <line x1="6" y1="6" x2="18" y2="18" />
+      </svg>
+      
     </header>
-    <div class="">
-    <h1 >Hello World!, 
+    <section class="">
+    <div class="welcome-div">
+    <h1 >Hi! &#129305, 
       I'm Leo,
       a Developer with a passion for technology.
     </h1>
 </div>
-<div class="">
-    <h1>About Me</h1>
-    <h2>If you wondering about me</h2>
+</section>
+<section class="about-me" >
+  <div class="about-header">
+    <h3>About Me</h3>
+    <h5>If you wondering about me</h5>
+    </div>
     <p>My name is Leonardo, I'm a 23 years old self tought Developer, from Madrid.</p>
     <p>Since I was a kid, I grew in a technologist Family that owned a telecom company, working in the company I worked from Reparing Smartphones and working with VoIP phones i learned alot about encryption and software.</p>
     <p>Later in life when i decided to go to university I decided with Tourism, so i left the tech area for a  while, in the middle of my studies, I started to get interested again in  tech be cause of all the technology in tourism so I decided to start learing programming formally </p>
@@ -34,26 +52,25 @@
     <h2> My Current stack of Languages/Technologies is: </h2>
 
     <p>"HTML5-CSS3-JAVASCRIPT-REACTJS-NEXTJS-WEBPACK-PARCEL-FIREBASE-NODEJS-GRAPHQL-RUST-WEBASSEMBLY-ACTIX-WEB"</p>
-  
-  </div>
+</section>
 
-
-  <div class="">
+<section class="">
     <h1>The Portafolio</h1>
 
     <h3>This is what I've been doing ;)</h3>
 
     <div class="">
       <div class="">
-        <h1>Mortgage Calculator</h1>
+        <h4>Mortgage Calculator</h4>
       </div>
       <div class="">
-        <h1>Vr Store and Reservation Manager</h1>
+        <h4>Vr Store and Reservation Manager</h4>
       </div>
       <div class="">
-        <h1>Admin page for Events Companies </h1>
+        <h4>Admin page for Events Companies </h4>
       </div>
     </div>
-  </div>
+  </section>
+  <script  src="/static/index.js"></script>
   </body>
 </html>
