--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
           <a href="#aboutme"> About Me</a>
         </li>
         <li class="nav-link"><a href="#portafolio">Portafolio</a></li>
-        <li class="nav-link">Contact</li>
+        <li class="nav-link"><a href="#contact">Contact</a></li>
       </ul>
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        class="icon icon-tabler icon-tabler-menu-2 burger"
+        class="icon-tabler icon-tabler-menu-2 burger"
         width="40"
         height="40"
         viewBox="0 0 24 24"
@@ -35,7 +35,7 @@
       </svg>
       <svg
         xmlns="http://www.w3.org/2000/svg"
-        class="icon icon-tabler icon-tabler-x close"
+        class="icon-tabler icon-tabler-x close"
         width="40"
         height="40"
         viewBox="0 0 24 24"
@@ -59,6 +59,24 @@
         <h2>A Developer with a passion for technology.</h2>
       </div>
       <div class="flexer">
+        <div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon-tabler icon-tabler-chevrons-down"
+            width="80"
+            height="80"
+            viewBox="0 0 24 24"
+            stroke-width="1"
+            stroke="#ffffff"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <polyline points="7 7 12 12 17 7" />
+            <polyline points="7 13 12 18 17 13" />
+          </svg>
+        </div>
         <div id="aboutme" class="about-header">
           <h3>ABOUT ME</h3>
           <h5>If you are wondering who I am...</h5>
@@ -99,7 +117,7 @@
 
           <div class="project">
             <h4>Portafolio Website</h4>
-            <div class="entire_section">
+            <div class="entire_section" id="reverse">
               <div class="resume">
                 <div class="paragraph">
                   <p>
@@ -131,7 +149,7 @@
                 </div>
               </div>
               <div class="picture">
-                <img src="/static/Rio.jpg" alt="" />
+                <img src="/static/Rio.webp" alt="" />
               </div>
             </div>
           </div>
@@ -139,7 +157,7 @@
             <h4>Mortgage Calculator</h4>
             <div class="entire_section">
               <div class="picture">
-                <img src="/static/Rio.jpg" alt="screenshot" />
+                <img src="/static/Rio.webp" alt="screenshot" />
               </div>
               <div class="resume">
                 <div class="paragraph">
@@ -177,7 +195,7 @@
           <div class="project">
             <h4>Vr Store and Reservation Manager</h4>
 
-            <div class="entire_section">
+            <div class="entire_section" id="reverse">
               <div class="resume">
                 <div class="paragraph">
                   <p>
@@ -206,7 +224,7 @@
                 </div>
               </div>
               <div class="picture">
-                <img src="/static/Rio.jpg" alt="" />
+                <img src="/static/Rio.webp" alt="" />
               </div>
             </div>
           </div>
@@ -214,7 +232,7 @@
             <h4>Admin page for Events Companies</h4>
             <div class="entire_section">
               <div class="picture">
-                <img src="/static/Rio.jpg" alt="" />
+                <img src="/static/Rio.webp" alt="" />
               </div>
               <div class="resume">
                 <div class="paragraph">
@@ -243,6 +261,105 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+        <div id="contact" class="contactMe">
+          <h1>Contact Me</h1>
+
+          <h4>You can talk to me and find me at:</h4>
+          <div class="icons_row">
+            <a href="" class="icon spotify"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-brand-spotify"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="#ffffff"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <circle cx="12" cy="12" r="9" />
+                <path d="M8 11.973c2.5 -1.473 5.5 -.973 7.5 .527" />
+                <path d="M9 15c1.5 -1 4 -1 5 .5" />
+                <path d="M7 9c2 -1 6 -2 10 .5" /></svg
+            ></a>
+            <a href="" class="icon instagram"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-brand-instagram"
+                width="80"
+                height="80"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="#ffffff"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <rect x="4" y="4" width="16" height="16" rx="4" />
+                <circle cx="12" cy="12" r="3" />
+                <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" /></svg
+            ></a>
+            <a href="" class="icon github"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-brand-github"
+                width="80"
+                height="80"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="#ffffff"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path
+                  d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+                /></svg
+            ></a>
+            <a href="" class="icon linkedin">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-brand-linkedin"
+                width="80"
+                height="80"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="#ffffff"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <rect x="4" y="4" width="16" height="16" rx="2" />
+                <line x1="8" y1="11" x2="8" y2="16" />
+                <line x1="8" y1="8" x2="8" y2="8.01" />
+                <line x1="12" y1="16" x2="12" y2="11" />
+                <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+              </svg>
+            </a>
+            <a href="" class="icon mail"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-mail"
+                width="80"
+                height="80"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="#ffffff"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <rect x="3" y="5" width="18" height="14" rx="2" />
+                <polyline points="3 7 12 13 21 7" /></svg
+            ></a>
+            <a href="" class="icon"></a>
           </div>
         </div>
       </div>
