--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
                 <div class="buttons">
                   <button class="demo">
                     <!-- TODO ADD LINK -->
-                    <a href="">Demo</a>
+                    <a href="" target="_blank" rel="noopener noreferrer">Demo</a>
                   </button>
 
                   <button class="repository">
                     <!-- TODO ADD LINK -->
-                    <a href="">Respository</a>
+                    <a href="https://github.com/lescuer97/portafolio_page" target="_blank" rel="noopener noreferrer">Respository</a>
                   </button>
                 </div>
               </div>
@@ -183,7 +183,11 @@
                 <div class="buttons">
                   <button class="demo">
                     <!-- TODO ADD LINK -->
-                    <a href="#"> Demo</a>
+                    <a href=""> Demo</a>
+                  </button>
+                  <button class="repository">
+                    <!-- TODO ADD LINK -->
+                    <a href="https://github.com/lescuer97/podcast" target="_blank" rel="noopener noreferrer"> Respository </a>
                   </button>
                 </div>
               </div>
@@ -221,7 +225,7 @@
                   </button>
                   <button class="repository">
                     <!-- TODO ADD LINK -->
-                    <a href=""> Respository </a>
+                    <a href="" target="_blank" rel="noopener noreferrer"> Respository </a>
                   </button>
                 </div>
               </div>
@@ -258,11 +262,11 @@
                 <div class="buttons">
                   <button class="demo">
                     <!-- TODO ADD LINK -->
-                    <a href=""> Demo</a>
+                    <a href="" target="_blank" rel="noopener noreferrer"> Demo</a>
                   </button>
                   <button class="repository">
                     <!-- TODO ADD LINK -->
-                    <a href=""> Respository </a>
+                    <a href="https://github.com/lescuer97/vr_leo" target="_blank" rel="noopener noreferrer"> Respository </a>
                   </button>
                 </div>
               </div>
@@ -276,7 +280,7 @@
 
           <h4>You can talk to me and find me at:</h4>
           <div class="icons_row">
-            <a href="" class="icon spotify"
+            <a href="" target="_blank" rel="noopener noreferrer" class="icon spotify"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="icon icon-tabler icon-tabler-brand-spotify"
@@ -293,7 +297,7 @@
                 <path d="M9 15c1.5 -1 4 -1 5 .5" />
                 <path d="M7 9c2 -1 6 -2 10 .5" /></svg
             ></a>
-            <a href="" class="icon instagram"
+            <a href="" target="_blank" rel="noopener noreferrer" class="icon instagram"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="icon icon-tabler icon-tabler-brand-instagram"
@@ -311,7 +315,7 @@
                 <circle cx="12" cy="12" r="3" />
                 <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" /></svg
             ></a>
-            <a href="" class="icon github"
+            <a href="" target="_blank" rel="noopener noreferrer" class="icon github"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="icon icon-tabler icon-tabler-brand-github"
@@ -329,7 +333,7 @@
                   d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
                 /></svg
             ></a>
-            <a href="" class="icon linkedin">
+            <a href="" target="_blank" rel="noopener noreferrer" class="icon linkedin">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="icon icon-tabler icon-tabler-brand-linkedin"
@@ -350,7 +354,7 @@
                 <path d="M16 16v-3a2 2 0 0 0 -4 0" />
               </svg>
             </a>
-            <a href="" class="icon mail"
+            <a href="" target="_blank" rel="noopener noreferrer" class="icon mail"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="icon icon-tabler icon-tabler-mail"
@@ -367,7 +371,7 @@
                 <rect x="3" y="5" width="18" height="14" rx="2" />
                 <polyline points="3 7 12 13 21 7" /></svg
             ></a>
-            <a href="" class="icon"></a>
+            <a href="" target="_blank" rel="noopener noreferrer" class="icon"></a>
           </div>
         </div>
       </div>
