--- a/index.html
+++ b/index.html
@@ -126,19 +126,13 @@
               <div class="resume">
                 <div class="paragraph">
                   <p>
-                    This is the very same page you are looking at, I decided to
-                    use vanilla Javascript, CSS and HTML. The reason for this is
-                    that my learning was primarily focus with framework so I
-                    decided to go with the basic option. The actual awesome part
-                    of this project is not the Front-end but the back-end, this
-                    is done with Rust specifically with actix-web which is a
-                    blazing fast web framework. This same web server ended up
-                    being used to host my learning recording that are show in
-                    this web page.
+                    I decided to create this page with the most vanilla resources posible.
+                    The reason for this is to perfect my basic abilities on web technology,
+                    the webiste is very basic for just presenting my portafolio and my abilities for posible clients and employers.
                   </p>
                 </div>
                 <div class="Technologies">
-                  JAVASCRIPT - CSS3 - HMTL5 - RUST - ACTIX WEB - POSTGRESQL
+                  VANILLA JAVASCRIPT - CSS3 - HMTL5 
                 </div>
 
                 <div class="buttons">
