--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
         <div id="contact" class="contactMe">
           <h1>Contact Me</h1>
 
-          <h4>You can talk to me and find me at:</h4>
-          <h2><a href="mailto:leo@leito.dev"> leo@leito.dev </a></h2>
+          <h4  >You can talk to me and find me at:</h4>
+          <h2><a id="email" href="mailto:leo@leito.dev"> leo@leito.dev </a></h2>
 
           <div class="icons_row">
             <a href="" target="_blank" rel="noopener noreferrer" class="icon spotify"
@@ -361,7 +361,7 @@
                 <rect x="3" y="5" width="18" height="14" rx="2" />
                 <polyline points="3 7 12 13 21 7" /></svg
             ></a>
-            <a href="" target="_blank" rel="noopener noreferrer" class="icon"></a>
+     
           </div>
         </div>
       </div>
