changed link and some css
Signed-off-by: lescuer97 <leoescuer@protonmail.com>

--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
                   </p>
                 </div>
                 <div class="Technologies">
-                  REACT - NEXTJS - TAILWINDCSS - HEADLESS-CMS 
+                  REACT - NEXTJS - TYPESCRIPT - TAILWINDCSS - HEADLESS-CMS 
                 </div>
                 <div class="buttons">
                   <button class="demo">
             
-                    <a href="https://pod.leito.dev"> Demo</a>
+                    <a href="https://podcast.leito.dev"> Demo</a>
                   </button>
                   <button class="repository">
                
@@ -217,6 +217,9 @@
                   </button>
                   <button class="repository">
                     <a href="https://github.com/lescuer97/loans_calculator" target="_blank" rel="noopener noreferrer"> Respository </a>
+                  </button>
+                  <button class="repository" id="special-repository">
+                    <a href="https://github.com/lescuer97/mortagage_calculator_wasm" target="_blank" rel="noopener noreferrer"> Respository of calculator </a>
                   </button>
                 </div>
               </div>
