--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <li class="nav-link"><a href="#portafolio" class="link-button">Portafolio</a></li>
         <li class="nav-link"><a href="#contact" class="link-button">Contact</a></li>
       </ul>
+      <!-- burger svg -->
+      
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="icon-tabler icon-tabler-menu-2 burger"
@@ -39,6 +41,7 @@
         <line x1="4" y1="12" x2="20" y2="12" />
         <line x1="4" y1="18" x2="20" y2="18" />
       </svg>
+      <!-- close svg -->
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="icon-tabler icon-tabler-x close"
@@ -112,8 +115,7 @@
           <h2>My Current stack of Languages / Technologies is:</h2>
 
           <p>
-            "HTML5-CSS3-JAVASCRIPT-REACTJS-NEXTJS-WEBPACK-PARCEL-FIREBASE-NODEJS-GRAPHQL-RUST-WEBASSEMBLY-ACTIX
-            WEB"
+            "HTML5 - CSS3 - JAVASCRIPT - REACTJS - NEXTJS - WEBPACK - PARCEL - FIREBASE - NODEJS </br> GRAPHQL - RUST - WEBASSEMBLY - ACTIX WEB"
           </p>
         </div>
         <div id="portafolio" class="portafolio">
