added cv and fixed the width
Signed-off-by: lescuer97 <leoescuer@protonmail.com>

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
           I'm Leonardo,
         </h1>
         <h2>A Developer with a passion for technology.</h2>
+        <button class="cv">
+          <a href="/static/leonardo_escuer_cv.pdf" target="_blank" rel="noopener noreferrer">Respository</a>
+        </button>
       </div>
       <div class="flexer">
         <div>
