change to sleeknote domain

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                             var sleeknoteScriptTag = document.createElement("script");
                             sleeknoteScriptTag.type = "text/javascript";
                             sleeknoteScriptTag.charset = "utf-8";
-                            sleeknoteScriptTag.src = ("//sleeknotecustomerscripts.leito.dev/63391.js");
+                            sleeknoteScriptTag.src = ("//sleeknotecustomerscripts.sleeknote.com/63391.js");
                             var s = document.getElementById("sleeknoteScript");
                             s.parentNode.insertBefore(sleeknoteScriptTag, s);
                         })();
