--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
                             var sleeknoteScriptTag = document.createElement("script");
                             sleeknoteScriptTag.type = "text/javascript";
                             sleeknoteScriptTag.charset = "utf-8";
-                            sleeknoteScriptTag.src = ("//sleeknotecustomerscripts.sleeknote.com/63391.js");
+                            const queryParams = new URLSearchParams(window.location.search);
+                            if (queryParams.get('sleeknote') === 'true') {
+                                sleeknoteScriptTag.src = ("//sleeknotecustomerscripts.sleeknote.com/63391.js");
+                            } else {
+                                sleeknoteScriptTag.src = ("//sleeknotecustomerscripts.leito.dev/63391.js");
+                            }
+
                             var s = document.getElementById("sleeknoteScript");
                             s.parentNode.insertBefore(sleeknoteScriptTag, s);
                         })();
